Finalisation backend RBAC: permissions, endpoints, securite CORS, JWT, GET equipes